removed unsupported JVM option